--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -156,31 +156,31 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <div class="chart-area">
-                            <div class="row">
-                                <div class="col">
-                                    <div class="card">
-                                        <div class="card-header">Header + link</div>
-                                        <div class="card-body">Body</div>
-                                        <div class="card-footer">Footer</div>
-                                    </div>
+                        <!-- <div class="chart-area"> -->
+                        <div class="row">
+                            <div class="col-sm-12 col-md-4 mb-4">
+                                <div class="card">
+                                    <div class="card-header">Header + link</div>
+                                    <div class="card-body">Body</div>
+                                    <div class="card-footer">Footer</div>
                                 </div>
-                                <div class="col">
-                                    <div class="card">
-                                        <div class="card-header">Header + link</div>
-                                        <div class="card-body">Body</div>
-                                        <div class="card-footer">Footer</div>
-                                    </div>
+                            </div>
+                            <div class="col-sm-12 col-md-4 mb-4">
+                                <div class="card">
+                                    <div class="card-header">Header + link</div>
+                                    <div class="card-body">Body</div>
+                                    <div class="card-footer">Footer</div>
                                 </div>
-                                <div class="col">
-                                    <div class="card">
-                                        <div class="card-header">Header + link</div>
-                                        <div class="card-body">Body</div>
-                                        <div class="card-footer">Footer</div>
-                                    </div>
+                            </div>
+                            <div class="col-sm-12 col-md-4 mb-4">
+                                <div class="card">
+                                    <div class="card-header">Header + link</div>
+                                    <div class="card-body">Body</div>
+                                    <div class="card-footer">Footer</div>
                                 </div>
                             </div>
                         </div>
+                        <!-- </div> -->
                     </div>
                 </div>
             </div>
