--- a/views/partials/flashMessages.ejs
+++ b/views/partials/flashMessages.ejs
@@ -11,3 +11,5 @@
                 <%= messages.error %>
             </div>
             <% } %>
+
+                <!-- <script src="/js/utilsFlashMessages.js"></script> -->
