--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -26,7 +26,7 @@
 
             <div class="row mb-4">
                 <div class="col-md-12 text-center">
-                    <%- language.parallax.intro %>
+                    <%- language.main.intro %>
                 </div>
             </div>
 
@@ -56,12 +56,23 @@
             <div class="row">
                 <div class="col-12">
                     <div class="card cardHome">
-                        <div class="card-header">
-                            <i class="fas fa-space-shuttle"></i>&nbsp;<strong>Inizia da qui</strong>
-                        </div>
-                        <div class="card-body">
-                            Da <a href="/register">qui</a> puoi procedere creando il tuo personale account
-                        </div>
+
+                        <% if (user) { %>
+                            <div class="card-header">
+                                <i class="fas fa-space-shuttle"></i>&nbsp;<strong>Hai già effettuato l'accesso</strong>
+                            </div>
+                            <div class="card-body">
+                                Buon divertimento! <i class="far fa-heart text-primary"></i>
+                            </div>
+                            <% } else { %>
+                                <div class="card-header">
+                                    <i class="fas fa-space-shuttle"></i>&nbsp;<strong>Inizia da qui</strong>
+                                </div>
+                                <div class="card-body">
+                                    Da <a href="/register">qui</a> puoi procedere creando il tuo personale account
+                                </div>
+                                <% } %>
+
                     </div>
                 </div>
             </div>
