--- a/views/public/partials/profileDropdown.ejs
+++ b/views/public/partials/profileDropdown.ejs
@@ -3,6 +3,9 @@
     <a class="dropdown-item" href="/profile">
         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400 "></i> Profile
     </a>
+    <a class="dropdown-item" href="/saved">
+        <i class="fas fa-bookmark fa-sm fa-fw mr-2 text-gray-400"></i> Salvati
+    </a>
 
     <% if (user.role === ROLE.ADMIN) { %>
         <div class="dropdown-divider "></div>
