--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -114,7 +114,7 @@
                                     Numero di utenti
                                 </div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800 ">
-                                    <a href="/admin/users" class="text-dark">
+                                    <a href="/admin/basics" class="text-dark">
                                         <%= number_basics %>
                                     </a>
                                 </div>
@@ -137,7 +137,7 @@
             <div class="col-xl-8 col-md-12 mb-4">
                 <div class="card border-left-dark shadow h-100 py-2">
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                        <h6 class="m-0 font-weight-bold text-dark">TOP 3</h6>
+                        <h6 class="m-0 font-weight-bold text-dark">TOP 3 or LAST 3</h6>
                         <div class="dropdown no-arrow">
                             <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
