--- a/views/public/partials/header.ejs
+++ b/views/public/partials/header.ejs
@@ -89,7 +89,7 @@
 
                             </li>
                             <li class="nav-item myNavItem">
-                                <a class="nav-link" href="/vidoes">
+                                <a class="nav-link" href="/videos">
                                     <%- language.nav.videos %>
                                 </a>
                             </li>
