--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -37,7 +37,7 @@
                             <strong>What?</strong>
                         </div>
                         <div class="card-body text-center">
-                            Piattaforma finalizzata al relax, alla motivazione e al conforto.<br>Ognuno può salvare quello che gli piace nella raccolta dedicata <a class="font-italic" href="/myfavorites">preferiti</a>
+                            Piattaforma finalizzata al relax, alla motivazione e al conforto.<br>Ognuno può salvare quello che gli piace nella raccolta dedicata <a class="font-italic" href="/saved">preferiti</a>
                         </div>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
 
             <div class="row">
                 <div class="col-12">
-                    <div class="card cardHome" style="height: 350px;">
+                    <div class="card cardHome">
                         <div class="card-header">
                             Pubblicazioni recenti
                         </div>
@@ -89,7 +89,7 @@
 
                             <div class="row">
 
-                                <div class="col-sm-12 col-md-4">
+                                <div class="col-sm-12 col-md-4 mb-4">
                                     <div class="card cardHome">
                                         <div class="card-header">
                                             Titolo
