--- a/views/admin/phrases/update.ejs
+++ b/views/admin/phrases/update.ejs
@@ -135,6 +135,7 @@
 
 
         <script src="/js/admin/crudPeople.js"></script>
+        <script src="/js/admin/switchPhrasePost.js"></script>
         <!-- <script src="/js/admin/crudPhrases.js"></script> -->
 
         <%- include('./../partials/footer') %>
