--- a/views/register.ejs
+++ b/views/register.ejs
@@ -120,7 +120,7 @@
         </div>
 
 
-        <script src="/js/utilsFlashMessages.js"></script>
+        <!-- <script src="/js/utilsFlashMessages.js"></script> -->
         <script src="/js/password.js"></script>
 
         <%- include('./public/partials/footer') %>
