--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -12,6 +12,12 @@
             </a>
         </div>
 
+        <div class="row">
+            <div class="col-12 text-center">
+                <%- include('../partials/flashMessages') %>
+            </div>
+        </div>
+
 
 
 
