--- a/views/partials/flashMessages.ejs
+++ b/views/partials/flashMessages.ejs
@@ -12,4 +12,4 @@
             </div>
             <% } %>
 
-                <!-- <script src="/js/utilsFlashMessages.js"></script> -->
+                <script src="/js/utilsFlashMessages.js"></script>
